--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.datasource.username=dhanush007
 spring.datasource.password=dhanush10
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dhanusht810@gmail.com
+spring.mail.password=vcvacbvqekrgpmxl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
