--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dhanusht810@gmail.com
-spring.mail.password=vcvacbvqekrgpmxl
+spring.mail.password=pflg udis lgkg zjpu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
